# $Id: Changes,v 1.118 2004/04/05 04:31:07 petdance Exp $
Revision history for Perl extension WWW::Mechanize

0.75_02
        [FIXES]
        * Test files account for new Google layout.

0.75_01 Sat Mar 27 22:49:14 CST 2004

        No changes.  Just reshuffled stuff around, and showed a diag so
        that David Wheeler can tell me more stuff about why Mech isn't
        working right.

0.74    Mon Mar 22 23:36:46 CST 2004
        [ENHANCEMENTS]
        * WWW::Mechanize now sends an Accept-Encoding header of "identity"
          to always enforce plaintext responses. Preliminary support for
          Compress::Zlib is also there, but is disabled by default.

        * Added click_button() and select() methods.  The field() method
          can now take an arrayref of values, if appropriate. Thanks,
          Linda Lee Julien.

        * Added url_abs and url_abs_regex parms to find_all_links().

        * URLs in META REFRESH tags are now treated as links.

        * t/taint.t makes sure that things that should be tainted are.

        [FIXES]
        * Still more fixes if the machine you're on doesn't have
          DNS pointing to it.

        * The local changes use localhost as the local host name, instead
          of whatever host name that might be on the box, but not in DNS.
          Thanks to David Wheeler for letting me play on his box.

        * The http_proxy and HTTP_PROXY environment variables get
          deleted during the tests that access the dummy local server.
          This should let your tests pass, and clear up a lot of RT
          tickets.

0.72    Mon Jan 26 21:07:20 CST 2004
        [ENHANCEMENTS]
        * Added the set_visible() method, thanks to Peter Scott.

        [DOCUMENTATION]
        * Started the Cookbook at WWW::Mechanize::Cookbook.pod.

        [INTERNALS]
        * Made the globbing in Makefile.PL a little less command-line
          intensive.  Also fixed the missing files in MANIFEST.