@@ -1,7 +1,11 @@
-# $Id: Changes,v 1.118 2004/04/05 04:31:07 petdance Exp $
+# $Id: Changes,v 1.119 2004/04/05 04:42:11 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.75_02
+        [ENHANCEMENTS]
+        * Added update_html() to let you update the HTML for the page
+          you're on.
+
         [FIXES]
         * Test files account for new Google layout.
 
